feat: add build directory for testing with dagger

--- a/flipt-client-python/pyproject.toml
+++ b/flipt-client-python/pyproject.toml
@@ -8,10 +8,12 @@ authors = ["Flipt Devs <dev@flipt.io>"]
 python = "^3.11"
 pydantic = "^2.4.2"
 
-
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+test = 'scripts:test'
