--- a/flipt-engine/Cargo.toml
+++ b/flipt-engine/Cargo.toml
@@ -17,6 +17,9 @@ snafu = "0.7.5"
 chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
 futures = "0.3"
 
+[build-dependencies]
+cbindgen = "0.26.0"
+
 [dev-dependencies]
 mockall = "0.11.4"
 
