--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -8,14 +8,18 @@
   "license": "ISC",
   "scripts": {
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier-check": "prettier --check src/**/*.ts"
+    "prettier-check": "prettier --check src/**/*.ts",
+    "test": "jest"
   },
   "dependencies": {
     "ffi-napi": "^4.0.3",
     "ref-napi": "^3.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.10",
     "@types/node": "^20.9.3",
-    "prettier": "^3.1.0"
+    "jest": "^29.7.0",
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1"
   }
 }
