--- a/flipt-client-ruby/Gemfile
+++ b/flipt-client-ruby/Gemfile
@@ -10,5 +10,6 @@ gem 'rake', '~> 12.0'
 
 group :development do
   gem 'bundler', '~> 2.0'
+  gem 'rspec', '~> 3.0'
   gem 'rubocop', require: false
 end
