--- a/flipt-client-ruby/Gemfile
+++ b/flipt-client-ruby/Gemfile
@@ -1,11 +1,15 @@
-source "https://rubygems.org"
+# frozen_string_literal: true
+
+source 'https://rubygems.org'
 
 # Specify your gem's dependencies in flipt-client-ruby.gemspec
 gemspec
 
-gem "rake", "~> 12.0"
-gem "ffi", "~> 1.16"
+gem 'ffi', '~> 1.16'
+gem 'rake', '~> 12.0'
 
 group :development do
-  gem "bundler", "~> 2.0"
+  gem 'bundler', '~> 2.0'
+  gem 'rspec', '~> 3.0'
+  gem 'rubocop', require: false
 end
