chore: automate client installs; update readmes (#25)
* chore: try to cleanup/automate ruby and typescript installs

* chore: update READMEs

* chore: use same build process for tests as in readme

* chore: fix double bash

* chore: package lib in python package

* chore: allow for all os' we support for python

* chore(wip): go

* chore: finish go updates

* chore: dont use env var at all

* chore: fix go test

* chore: import path

--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "flipt-client-node",
+  "name": "flipt-client",
   "version": "0.0.1",
   "description": "Flipt Node Client for client-side evaluation",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "",
   "license": "MIT",
+  "files": [
+    "dist",
+    "ext"
+  ],
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "lint": "prettier --check src/**/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "dependencies": {
     "ffi-napi": "^4.0.3",
