--- a/flipt-engine/Cargo.toml
+++ b/flipt-engine/Cargo.toml
@@ -13,9 +13,9 @@ serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.89", features = ["raw_value"] }
 uuid = { version = "1.5.0", features = ["v4"] }
 crc32fast = "1.3.2"
-snafu = "0.7.5"
 chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
 futures = "0.3"
+thiserror = "1.0.50"
 
 [build-dependencies]
 cbindgen = "0.26.0"
