chore: mv build to test folder

--- a/.github/workflows/test-sdks.yml
+++ b/.github/workflows/test-sdks.yml
@@ -26,4 +26,4 @@ jobs:
 
       - name: Run Integration Tests
         run: |
-          dagger run go run ./build
+          dagger run go run ./test
