chore: mv build to test (#31)
* chore: mv build to test folder

* chore: set workflow dispatch option for ITs

* chore: make node; latest flipt

* fix: finally for node tests to dealloc engine

--- a/.github/workflows/test-sdks.yml
+++ b/.github/workflows/test-sdks.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
   pull_request:
+  workflow_dispatch:
 
 jobs:
   test:
@@ -26,4 +27,4 @@ jobs:
 
       - name: Run Integration Tests
         run: |
-          dagger run go run ./build
+          dagger run go run ./test
