--- a/flipt-engine/Cargo.toml
+++ b/flipt-engine/Cargo.toml
@@ -16,6 +16,7 @@ crc32fast = "1.3.2"
 chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
 futures = "0.3"
 thiserror = "1.0.50"
+openssl = { version = "0.10", features = ["vendored"] }
 
 [build-dependencies]
 cbindgen = "0.26.0"
