chore: update target output path

--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -39,5 +39,5 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: libfliptengine-${{ matrix.platform.name }}
-          path: target/${{ matrix.platform.target }}/release/*.(so|dll|dylib|h)
+          path: target/release/*.(so|dll|dylib|h)
           retention-days: 5
