--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -36,6 +36,9 @@ jobs:
           args: --target ${{ matrix.platform.target }} --release
           use-cross: true
 
+      - run: |
+          tree
+
       - uses: actions/upload-artifact@v4
         with:
           name: libfliptengine-${{ matrix.platform.name }}
