--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -14,9 +14,9 @@ jobs:
           - name: Linux-x86_64
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-          - name: Linux-armv7
+          - name: Linux-arm64
             os: ubuntu-latest
-            target: armv7-unknown-linux-gnueabihf
+            target: aarch64-unknown-linux-gnu
 
     runs-on: ${{ matrix.platform.os }}
     steps:
