--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -12,13 +12,17 @@ jobs:
       matrix:
         platform:
           - name: Linux-x86_64
-            os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
           - name: Linux-arm64
-            os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
+          # - name: Windows-x86_64
+          #   target: x86_64-pc-windows-msvc
+          # - name: Apple-x86_64
+          #   target: x86_64-apple-darwin
+          - name: Apple-arm64
+            target: aarch64-apple-darwin
 
-    runs-on: ${{ matrix.platform.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
