--- a/.github/workflows/build-engine.yml
+++ b/.github/workflows/build-engine.yml
@@ -12,17 +12,19 @@ jobs:
       matrix:
         platform:
           - name: Linux-x86_64
+            os: ubuntu-latest
+            use_cross: false
             target: x86_64-unknown-linux-gnu
           - name: Linux-arm64
+            os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-          # - name: Windows-x86_64
-          #   target: x86_64-pc-windows-msvc
-          # - name: Apple-x86_64
-          #   target: x86_64-apple-darwin
-          - name: Apple-arm64
+            use_cross: true
+          - name: Darwin-arm64
+            os: macos-latest
             target: aarch64-apple-darwin
+            use_cross: false
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.platform.os }}
     steps:
       - uses: actions/checkout@v3
 
@@ -48,7 +50,7 @@ jobs:
         with:
           command: build
           args: --target ${{ matrix.platform.target }} --release
-          use-cross: true
+          use-cross: ${{ matrix.platform.use_cross }}
 
       - uses: actions/upload-artifact@v4
         with:
