--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flipt-client",
+  "name": "@flipt-io/flipt-client",
   "version": "0.0.1",
   "description": "Flipt Node Client for client-side evaluation",
   "main": "dist/index.js",
