--- a/flipt-client-python/pyproject.toml
+++ b/flipt-client-python/pyproject.toml
@@ -1,9 +1,12 @@
 [tool.poetry]
-include = [{ path = "ext/libfliptengine.*" }]
+include = [{ path = "ext/**/*" }, { path = "README.md" }]
 name = "flipt-client"
 version = "0.0.1"
-description = ""
+description = "Flipt Client Evaluation SDK"
 authors = ["Flipt Devs <dev@flipt.io>"]
+readme = "README.md"
+license = "MIT"
+repository = "https://github.com/flipt-io/flipt-client-sdks"
 
 [tool.poetry.dependencies]
 python = "^3.11"
