--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,13 +1,25 @@
 {
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "bump-minor-pre-major": false,
+  "bump-patch-for-minor-pre-major": true,
+  "draft": false,
+  "prerelease": false,
+
   "packages": {
-    ".": {
-      "changelog-path": "CHANGELOG.md",
-      "release-type": "simple",
-      "bump-minor-pre-major": false,
-      "bump-patch-for-minor-pre-major": false,
-      "draft": false,
-      "prerelease": false
+    "flipt-engine": {
+      "release-type": "rust"
+    },
+    "flipt-client-go": {
+      "release-type": "go"
+    },
+    "flipt-client-node": {
+      "release-type": "node"
+    },
+    "flipt-client-python": {
+      "release-type": "python"
+    },
+    "flipt-client-ruby": {
+      "release-type": "ruby"
     }
-  },
-  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
+  }
 }
