--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "bump-minor-pre-major": true,
-  "bump-patch-for-minor-pre-major": false,
-  "draft": false,
+  "bump-minor-pre-major": false,
+  "bump-patch-for-minor-pre-major": true,
+  "draft": true,
   "prerelease": false,
 
   "packages": {
