--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "bump-minor-pre-major": false,
+  "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "draft": true,
   "prerelease": false,
