chore: try to set sentence case plugin

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -27,5 +27,10 @@
       "release-type": "ruby",
       "version-file": "lib/flipt_client/version.rb"
     }
-  }
+  },
+  "plugins": [
+    {
+      "type": "sentence-case"
+    }
+  ]
 }
