chore: set token perms

--- a/.github/workflows/package-engine.yml
+++ b/.github/workflows/package-engine.yml
@@ -8,6 +8,9 @@ on:
         description: "Tag to build"
         required: true
 
+permissions:
+  contents: write
+
 jobs:
   build:
     strategy:
