--- a/.github/workflows/package-engine.yml
+++ b/.github/workflows/package-engine.yml
@@ -57,10 +57,14 @@ jobs:
           args: --target ${{ matrix.platform.target }} --release
           use-cross: ${{ matrix.platform.use_cross }}
 
+      - run: |
+          tar -czvf flipt-engine-${{ matrix.platform.name }}.tar.gz \
+            target/${{ matrix.platform.target }}/release/libfliptengine.* \
+            target/${{ matrix.platform.target }}/release/flipt_engine.h
+
       - name: Upload Release Assets
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.event.release.tag_name || inputs.tag }}
           files: |
-            target/${{ matrix.platform.target }}/release/libfliptengine.*
-            target/${{ matrix.platform.target }}/release/flipt_engine.h
+            flipt-engine-${{ matrix.platform.name }}.tar.gz
