chore: try to chain workflows

--- a/.github/workflows/package-engine.yml
+++ b/.github/workflows/package-engine.yml
@@ -1,4 +1,4 @@
-name: Package Rust Engine
+name: Package Engine
 on:
   release:
     types: [published]
@@ -69,3 +69,14 @@ jobs:
           tag_name: ${{ github.event.release.tag_name || inputs.tag }}
           files: |
             flipt-engine-${{ matrix.platform.name }}.tar.gz
+
+      - run: |
+          echo ${{ toJson(github.event) }} > event.json
+        if: github.event_name == 'release'
+
+      - name: Upload event data as artifact
+        uses: actions/upload-artifact@v2
+        if: github.event_name == 'release'
+        with:
+          name: event.json
+          path: event.json
