chore: prep for rubygems push

--- a/.github/workflows/package-sdks.yaml
+++ b/.github/workflows/package-sdks.yaml
@@ -17,6 +17,9 @@ on:
 permissions:
   contents: write
 
+env:
+  RUBYGEMS_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
