chore: forgot to set npm api key in workflow

--- a/.github/workflows/package-sdks.yaml
+++ b/.github/workflows/package-sdks.yaml
@@ -19,6 +19,7 @@ permissions:
 
 env:
   RUBYGEMS_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
+  NPM_API_KEY: ${{ secrets.NPM_API_KEY }}
 
 jobs:
   build:
