chore: add back rlib

--- a/flipt-engine/Cargo.toml
+++ b/flipt-engine/Cargo.toml
@@ -26,7 +26,7 @@ mockall = "0.11.4"
 
 [lib]
 name = "fliptengine"
-crate-type = ["dylib"]
+crate-type = ["rlib", "dylib"]
 
 [profile.release]
 strip = true
