chore: update ruby sdk workflow tag format

--- a/.github/workflows/package-ruby-sdk.yml
+++ b/.github/workflows/package-ruby-sdk.yml
@@ -1,7 +1,7 @@
 name: Package Ruby SDK
 on:
   push:
-    tags: ["flipt-client-ruby-**"]
+    tags: ["flipt-client-ruby/**"]
 jobs:
   build:
     uses: ./.github/workflows/package-sdks.yml
