--- a/.github/workflows/package-python-sdk.yml
+++ b/.github/workflows/package-python-sdk.yml
@@ -2,6 +2,13 @@ name: Package Python SDK
 on:
   push:
     tags: ["flipt-client-python-**"]
+
+permissions:
+  contents: write
+
+env:
+  PYPI_API_KEY: ${{ secrets.PYPI_API_KEY }}
+
 jobs:
   build:
     uses: ./.github/workflows/package-sdks.yml
