chore: fix go tag

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
   "bump-patch-for-minor-pre-major": true,
   "draft": false,
   "prerelease": false,
+  "last-release-sha": "048330d24f4817aa3c7ded97fc0836878ec9a4b2",
   "packages": {
     "flipt-engine": {
       "component": "flipt-engine",
