--- a/flipt-engine/Cargo.toml
+++ b/flipt-engine/Cargo.toml
@@ -17,9 +17,17 @@ chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
 futures = "0.3"
 thiserror = "1.0.50"
 openssl = { version = "0.10", features = ["vendored"] }
+tonic = { version = "0.10", features = ["gzip"] }
+prost = "0.12"
+prost-types = "0.12"
+pbjson = "0.6"
+pbjson-types = "0.6"
+protos = { path = "./gen" }
 
 [build-dependencies]
 cbindgen = "0.26.0"
+tonic-build = "0.10"
+pbjson-build = "0.6"
 
 [dev-dependencies]
 mockall = "0.11.4"
