--- a/.github/workflows/test-engine.yml
+++ b/.github/workflows/test-engine.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: 1.75.0
           override: true
 
       - name: Test
