chore: try to set last release sha

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
   "bump-patch-for-minor-pre-major": true,
   "draft": false,
   "prerelease": false,
+  "last-release-sha": "79dffc96117d2da9881bb8ab653d93c607fbb212",
   "packages": {
     "flipt-engine": {
       "component": "flipt-engine",
