--- a/flipt-client-node/tsconfig.json
+++ b/flipt-client-node/tsconfig.json
@@ -3,9 +3,10 @@
     "module": "commonjs",
     "target": "es2019",
     "declaration": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist/**/*"]
 }
