--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -18,6 +18,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/ffi": "^0.2.7",
     "ffi-napi": "^4.0.3",
     "ref-napi": "^3.0.3"
   },
