--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
 [workspace]
 resolver = "2"
-members = [
-  "./flipt-engine",
-  "./flipt-engine/lib/evaluation",
-]
+members = ["./flipt-engine", "./flipt-evaluation"]
