chore(refactor): Refactor engine eval projects (#102)
* chore: refactor engine/evaluation projects

* chore: prevent from accidentally publishing crates

* chore: rename

* chore: move/fix example

* chore: set relative gitignores

* chore: update diagrams/readmes

--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "flipt-client-engine"
+name = "flipt-engine-ffi"
 version = "0.0.4"
 edition = "2021"
 authors = ["Flipt Devs <dev@flipt.io>"]
 license = "MIT"
+description = "Flipt FFI Client Engine"
+publish = false
 
 [dependencies]
 libc = "0.2.150"
@@ -11,7 +13,7 @@ serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.89", features = ["raw_value"] }
 
 [dependencies.flipt-evaluation]
-path = "./lib/evaluation"
+path = "../flipt-evaluation"
 
 [build-dependencies]
 cbindgen = "0.26.0"
