--- a/flipt-evaluation/Cargo.toml
+++ b/flipt-evaluation/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.0.3"
 edition = "2021"
 authors = ["Flipt Devs <dev@flipt.io>"]
 license = "MIT"
+description = "Flipt Evaluation Library"
+publish = false
+
+[lib]
+name = "fliptevaluation"
+path = "src/lib.rs"
 
 [dependencies]
 reqwest = { version = "0.11.22", features = ["json", "blocking"] }
